# Makemore

./: .gitignore  gpt.ipynb  makemore.ipynb  makemore_part2.ipynb  makemore_part3.ipynb  makemore_part5.ipynb  model.py  pyproject.toml  train_gpt2.py  train_gpt2_ddp.py
makemore/: makemore.ipynb  makemore_part2.ipynb  makemore_part3.ipynb  makemore_part5.ipynb
